# MFA-Tool

./: .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
public/proto/: migration.proto
src/: App.test.tsx  App.tsx  index.css  index.css.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AccountCard.tsx  AccountDetailModal.tsx  AccountList.tsx  AccountPage.tsx  AccountToolbar.tsx  AppUpdateManager.tsx  BackupPanel.tsx  BatchToolbar.tsx  CheckResultDialog.tsx  Dashboard.tsx  DedupDialog.tsx  DraggableAccountCard.tsx  DraggableAccountList.tsx  GroupManagerPanel.tsx  GroupPage.tsx  GroupSelector.tsx  HomePage.tsx  ImageUploader.tsx  LocaleToggle.tsx  ManualAddForm.tsx  RecentAccounts.tsx  Sidebar.tsx  SortControls.tsx  TempPanel.tsx  ThemeToggle.tsx  Toast.tsx  UpdateDialog.tsx  WebDavSyncPanel.tsx
src/contexts/: I18nContext.tsx
src/hooks/: useAccounts.ts  useAppUpdater.ts  useGroups.ts  useLocale.ts  useTOTP.test.tsx  useTOTP.ts  useTheme.ts  useViewportHeight.test.tsx  useViewportHeight.ts
src/lib/: account-manager.property.test.ts  account-manager.test.ts  account-manager.ts  backup.test.ts  backup.ts  dashboard-utils.property.test.tsx  dashboard-utils.test.ts  dashboard-utils.ts  dedup-checker.property.test.ts  dedup-checker.ts  group-manager.property.test.ts  group-manager.test.ts  group-manager.ts  i18n.ts  sorter.ts  (+28 more)
(+17 files in other folders)
