[package]
name = "mfa-tool"
version = "0.3.0"
description = "MFA Tool desktop authenticator built with Tauri"
authors = ["CovoebGem"]
license = "MIT"
repository = "https://github.com/CovoebGem/MFA-Tool"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mfa_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
